# FRCAnalysisRust

./: .gitignore  .travis.yml  Cargo.toml  README.md
TheBlueAlliance/: Cargo.toml
TheBlueAlliance/src/: lib.rs  matches.rs  team.rs
src/: kiosk.rs  main.rs  opr.rs  prediction.rs  state.rs
src/data/: mod.rs
src/prediction/: fann.rs  mod.rs
src/simulation/: mod.rs  opr.rs
the-blue-alliance/: Cargo.toml
the-blue-alliance/src/: cache.rs  district.rs  event.rs  lib.rs  matches.rs  team.rs
the_blue_alliance/: Cargo.toml
the_blue_alliance/src/: lib.rs  matches.rs  team.rs
