[package]
name = "frc-analysis"
version = "0.1.0"
authors = ["Conner Ebbinghaus <connerebbinghaus@gmail.com>"]

[workspace]
members = ["the-blue-alliance"]

[dependencies]
log = "0.4"
pretty_env_logger = "0.2"
rusty-machine = "0.5"
futures = "0.1"
futures-cpupool = "0.1"
nalgebra = "0.15"
itertools = "0.7"
[dependencies.the-blue-alliance]
path = "the-blue-alliance"

[profile.release]
debug = true