[package]
name = "the-blue-alliance"
version = "0.1.0"
authors = ["Conner Ebbinghaus <connerebbinghaus@gmail.com>"]

[dependencies]
hyper = "0.12"
hyper-tls = "0.2"
futures = "0.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
log = "0.4"
tokio-core = "0.1"
chrono = { version = "0.4", features = ["serde"] }
cache_control = "0.1.0"
time = "*"
http = "0.1"
serde_cbor = "0.8"