[package]
name = "the-blue-alliance"
version = "0.1.0"
authors = ["Conner Ebbinghaus <connerebbinghaus@gmail.com>"]

[dependencies]
hyper = "0.12"
hyper-rustls = "0.16"
futures = "0.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
cache_control = "0.1.0"
http = "0.1"
serde_cbor = "0.9"
smallvec = "0.6"
time = "0.1"
